--- a/DrawingRegisterWeb/Views/Home/Index.cshtml
+++ b/DrawingRegisterWeb/Views/Home/Index.cshtml
@@ -4,9 +4,7 @@
 
 <h1 class="lead text-center">Practice project for ASP.NET Core (Model-View-Controller) with C# and Razor Pages.</h1>
 
-<h2 class="text-center text-primary mb-3 mt-4">What is Drawing Register?</h2>
-
-<div class="row">
+<div class="row mt-5">
 	<div class="col-lg-4 p-3">
 		<div class="cardHome card-1 h-100" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCard1" aria-controls="offcanvasCard1">
 			<h3>A Drawing Register</h3>
@@ -27,9 +25,7 @@
 	</div>
 </div>
 
-<h3 class="text-center text-primary mb-3 mt-4">ASP.NET core MVC learning curve</h3>
-
-<div id="marginForHomeIntroduction" class="row">
+<div id="marginForHomeIntroduction" class="row mt-5">
 	<div class="col-lg-4 p-3">
 		<div class="cardHome card-4 h-100" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCard4" aria-controls="offcanvasCard4">
 			<h3>Application</h3>
