--- a/DrawingRegisterWeb/Views/Drawings/Details.cshtml
+++ b/DrawingRegisterWeb/Views/Drawings/Details.cshtml
@@ -1,77 +1,96 @@
 ﻿@model DrawingRegisterWeb.ViewModels.DrawingVM
 
 @{
-	ViewData["Title"] = "Details";
+	ViewData["Title"] = "Drawing Details";
 }
 
-<h1 class="text-primary">Details</h1>
+<div class="rounded p-3" style="background-color:rgb(100, 160, 250, 0.1);">
+	<div class="row">
+		<div class="col">
+			<img src="~/Assets/Drawing-2.svg" style="width:100px"/>
+		</div>
+		<div class="col">
+			<h1 class="text-primary">Drawing Details</h1>
+			<h4 class="mt-3">@Html.DisplayFor(model => model.Drawing!.DrawingNumber) @Html.DisplayFor(model => model.Drawing!.Name)</h4>
+		</div>
+	</div>
 
-<div class="alert alert-dismissible alert-warning">
+	<div class="row mt-2">
+		<div class="col">
+			<p class="text-secondary">
+				&emsp; @Html.DisplayFor(model => model.Drawing!.Description)
+			</p>
+		</div>
+		<div class="col">
+			<dl class="row">
+				<dt class = "col-sm-4">
+					@Html.DisplayNameFor(model => model.Drawing!.CreateDate)
+				</dt>
+				<dd class = "col-sm-8">
+					@Html.DisplayFor(model => model.Drawing!.CreateDate)
+				</dd>
+				<dt class = "col-sm-4">
+					@Html.DisplayNameFor(model => model.Drawing!.Project)
+				</dt>
+				<dd class = "col-sm-8">
+					@Html.DisplayFor(model => model.Drawing!.Project.ProjectNubmer) @Html.DisplayFor(model => model.Drawing!.Project.Name)
+				</dd>
+			</dl>
+		</div>
+	</div>
+
+	<div class="btn-group" role="group">
+		<a asp-controller="Projects" asp-action="Details" asp-route-id="@Model.Drawing!.ProjectId" class="btn btn-outline-secondary">Go to Project</a>
+		<a asp-action="Index" class="btn btn-outline-secondary">Go to Drawings List</a>
+		<a asp-action="Edit" asp-route-id="@Model.Drawing!.Id" class="btn btn-outline-primary">Edit</a>
+		<a asp-action="Delete" asp-route-id="@Model.Drawing!.Id" class="btn btn-outline-danger">Delete</a>
+	</div>
+</div>
+
+@*<div class="alert alert-dismissible alert-warning">
   <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
   <h4 class="alert-heading">Warning!</h4>
   <p class="mb-0">&emsp;The good practice consists in separating your drawing numbers from the revision by the sign underscore "_". <b>For example, "1-0001_A" 
 	  is a drawing numbered 1-0001 and revision A</b>. It is a common practice to name engineering revisions. The automatic revision will be 
 	  delegated after the last underscore symbol "_". <b>Check whether your drawing file complies with this rule</b>. If your drawing number has symbol "_" 
 	  and not revised, or revised without underscore sign - automatic revision will not be delegated or will be misleading.</p>
-</div>
+</div>*@
 
-<div>
-	<h4>Drawing</h4>
-	<hr />
-	<dl class="row">
-		<dt class = "col-sm-2">
-			@Html.DisplayNameFor(model => model.Drawing!.DrawingNumber)
-		</dt>
-		<dd class = "col-sm-10">
-			@Html.DisplayFor(model => model.Drawing!.DrawingNumber)
-		</dd>
-		<dt class = "col-sm-2">
-			@Html.DisplayNameFor(model => model.Drawing!.Name)
-		</dt>
-		<dd class = "col-sm-10">
-			@Html.DisplayFor(model => model.Drawing!.Name)
-		</dd>
-		<dt class = "col-sm-2">
-			@Html.DisplayNameFor(model => model.Drawing!.Description)
-		</dt>
-		<dd class = "col-sm-10">
-			@Html.DisplayFor(model => model.Drawing!.Description)
-		</dd>
-		<dt class = "col-sm-2">
-			@Html.DisplayNameFor(model => model.Drawing!.CreateDate)
-		</dt>
-		<dd class = "col-sm-10">
-			@Html.DisplayFor(model => model.Drawing!.CreateDate)
-		</dd>
-		<dt class = "col-sm-2">
-			@Html.DisplayNameFor(model => model.Drawing!.Project)
-		</dt>
-		<dd class = "col-sm-10">
-			@Html.DisplayFor(model => model.Drawing!.Project.Description)
-		</dd>
-	</dl>
-</div>
+<h3 class="mt-5">Upload New Files:</h3>
 
-<div class="btn-group" role="group">
-	<a asp-controller="Projects" asp-action="Details" asp-route-id="@Model.Drawing!.ProjectId" class="btn btn-outline-secondary">Go to Project</a>
-	<a asp-action="Index" class="btn btn-outline-secondary">Go to Drawings List</a>
-	<a asp-action="Edit" asp-route-id="@Model.Drawing!.Id" class="btn btn-outline-primary">Edit</a>
-	<a asp-action="Delete" asp-route-id="@Model.Drawing!.Id" class="btn btn-outline-danger">Delete</a>
-</div>
+<form asp-controller="DrawingFiles" asp-action="Create" method="post" enctype="multipart/form-data" class="mt-3">
+	<div class="d-flex">
+		<div class="form-check form-switch">
+			<input onclick="changeText()" name="automaticRevision" value="true" class="form-check-input" type="checkbox" id="flexSwitchCheckChecked">
+			<label id="checkBoxLabel" class="form-check-label text-secondary" for="flexSwitchCheckChecked">Delegate automatic revision by file name?</label>
+		</div>
+		<button
+			type="button" 
+			class="btn btn-outline-danger"
+			style="margin-left:5em"
+			data-bs-toggle="tooltip" 
+			data-bs-placement="top" 
+			data-bs-original-title="The good practice consists in separating your drawing numbers from the revision by the sign underscore _. 
+				For example, 1-0001_A is a drawing numbered 1-0001 and revision A. Check whether your drawing file complies with this rule. 
+				If your drawing number has symbol _ and not revised, or revised without underscore sign - automatic revision will not be 
+				delegated or will be misleading."
+			aria-describedby="tooltip716761">
+				<i class="bi bi-question-lg"></i>
+		</button>
+	</div>
 
-<hr />
-
-<h5>Drawing Files</h5>
-
-<form asp-controller="DrawingFiles" asp-action="Create" method="post" enctype="multipart/form-data" class="row mt-3 mb-3">
-	   <div class="col-8">
+	<div class="row mt-3">
+		<div class="col-8">
 			<input type="text" name="drawingId" value="@Model.Drawing!.Id" hidden/>
 			<input id="inputFile" type="file" name="files" class="form-control" multiple/>
-	   </div> 
-	   <button id="submitFile" type="submit" class="btn btn-primary col-4">Upload</button >
+		</div> 
+		<button id="submitFile" type="submit" class="btn btn-primary col-4">Upload</button >
+	</div>
 </form>
 
-<table class="table table-striped mt-3" id="sortTable" style="vertical-align: middle">
+<h2 class="mt-5">Drawing Files:</h2>
+
+<table class="table table-striped table-sm mt-3" id="sortTable" style="vertical-align: middle">
 	<thead>
 		<tr class="user-select-none">
 			<th onclick="sortTable(0)">
@@ -175,5 +194,18 @@
 				submitfile.disabled = false;
 			}
 		});
+
+		//CheckBox Style Control
+		const checkBoxLabel = document.getElementById("checkBoxLabel");
+
+		function changeText(){
+			if(checkBoxLabel.classList.contains("text-primary")){
+				checkBoxLabel.classList.remove("text-primary");
+				checkBoxLabel.classList.add("text-secondary");
+			} else {
+				checkBoxLabel.classList.remove("text-secondary");
+				checkBoxLabel.classList.add("text-primary");
+			}
+		}
 	</script>
 }
