--- a/DrawingRegisterWeb/Views/Drawings/Index.cshtml
+++ b/DrawingRegisterWeb/Views/Drawings/Index.cshtml
@@ -1,71 +1,81 @@
 ﻿@model DrawingRegisterWeb.ViewModels.DrawingVM
 
 @{
-    ViewData["Title"] = "Drawings";
+	ViewData["Title"] = "Drawings";
 }
 
-<h1 class="text-primary mb-3">Drawings</h1>
+<div class="row mb-5">
+	<div class="col">
+		<h1 class="text-primary">Drawings</h1>
+	</div>
+	<div class="col text-center mt-3">
+		<img src="~/Assets/Drawing-1.svg" style="width:100px"/>
+	</div>
+</div>
+
 
 <form asp-controller="Drawings" asp-action="Index" method="get" class="d-flex text-secondary">
-        <select asp-for="Projects" asp-items="Model.ProjectSelectList" class="form-select me-sm-2">
-            <option value="">All</option>
-        </select>
+		<select asp-for="Projects" asp-items="Model.ProjectSelectList" class="form-select me-sm-2">
+			<option value="">All</option>
+		</select>
 
-        <input asp-for="Search" type="text" class="form-control me-sm-2" placeholder="Search">
-        <button class="btn btn-secondary" type="submit">Search</button>
+		<input asp-for="Search" type="text" class="form-control me-sm-2" placeholder="Search">
+		<button class="btn btn-secondary" type="submit">Search</button>
 </form>
 
-<table class="table table-striped mt-3" id="sortTable" style="vertical-align: middle">
-    <thead>
-        <tr class="user-select-none">
-            <th onclick="sortTable(0)">
-                @Html.DisplayNameFor(model => model.Drawings![0].DrawingNumber)
-                <i class="sortIcon bi"></i>
-            </th>
-            <th onclick="sortTable(1)">
-                @Html.DisplayNameFor(model => model.Drawings![0].Name)
-                <i class="sortIcon bi"></i>
-            </th>
-            <th onclick="sortTable(2)">
-                @Html.DisplayNameFor(model => model.Drawings![0].Description)
-                <i class="sortIcon bi"></i>
-            </th>
-            <th onclick="sortTable(3)">
-                @Html.DisplayNameFor(model => model.Drawings![0].Project)
-                <i class="sortIcon bi"></i>
-            </th>
-            <th onclick="sortTable(4)">
-                @Html.DisplayNameFor(model => model.Drawings![0].CreateDate)
-                <i class="sortIcon bi"></i>
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model.Drawings!) 
-        {
-            <tr>
-                <td>
-                   @Html.DisplayFor(modelItem => item.DrawingNumber)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Description)
-                </td>
-                <td>
-                    @item.Project.ProjectNubmer @item.Project.Name
-                </td>
-                <td>
-                    @item.CreateDate.ToString("yyyy/MM/dd")
-                </td>
-                <td>
-                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-primary"> 
-                        <i class="bi bi-folder2-open"></i> Open
-                    </a>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+<div class="table-responsive mt-3">
+	<table class="table table-striped table-sm" id="sortTable" style="vertical-align: middle">
+		<thead>
+			<tr class="user-select-none">
+				<th onclick="sortTable(0)">
+						@Html.DisplayNameFor(model => model.Drawings![0].DrawingNumber)
+					<i class="sortIcon bi"></i>
+				</th>
+				<th onclick="sortTable(1)">
+						@Html.DisplayNameFor(model => model.Drawings![0].Name)
+					<i class="sortIcon bi"></i>
+				</th>
+				<th onclick="sortTable(2)">
+						@Html.DisplayNameFor(model => model.Drawings![0].Description)
+					<i class="sortIcon bi"></i>
+				</th>
+				<th onclick="sortTable(3)">
+						@Html.DisplayNameFor(model => model.Drawings![0].Project)
+					<i class="sortIcon bi"></i>
+				</th>
+				<th onclick="sortTable(4)">
+						@Html.DisplayNameFor(model => model.Drawings![0].CreateDate)
+					<i class="sortIcon bi"></i>
+				</th>
+				<th></th>
+			</tr>
+		</thead>
+		<tbody>
+				@foreach (var item in Model.Drawings!)
+				{
+					<tr>
+						<td>
+							@Html.DisplayFor(modelItem => item.DrawingNumber)
+						</td>
+						<td>
+							@Html.DisplayFor(modelItem => item.Name)
+						</td>
+						<td>
+							@Html.DisplayFor(modelItem => item.Description)
+						</td>
+						<td>
+							@item.Project.ProjectNubmer @item.Project.Name
+						</td>
+						<td>
+							@item.CreateDate.ToString("yyyy/MM/dd")
+						</td>
+						<td>
+							<a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-primary"> 
+								<i class="bi bi-folder2-open"></i> Open
+							</a>
+						</td>
+					</tr>
+				}
+		</tbody>
+	</table>
+</div>
