--- a/DrawingRegisterWeb/Views/ProjectStates/Index.cshtml
+++ b/DrawingRegisterWeb/Views/ProjectStates/Index.cshtml
@@ -4,13 +4,22 @@
 	ViewData["Title"] = "Project States";
 }
 
-<h1 class="text-primary">Project States</h1>
+<div class="row">
+	<div class="col">
+		<h1 class="text-primary">Project States</h1>
+		<p class="mt-5">
+			<a asp-action="Create" class="btn btn-primary">
+				Create New Custom State
+			</a>
+		</p>
+	</div>
+	<div class="col text-center mt-3">
+		<img src="~/Assets/ProjectState.svg" style="width:100px"/>
+	</div>
+</div>
 
-<p class="mt-3">
-	<a asp-action="Create" class="btn btn-primary">
-		Create New Custom State
-	</a>
-</p>
+
+
 
 <form asp-controller="ProjectStates" asp-action="Index" method="get" class="d-flex mt-3">
 	<select asp-for="States" class="text-secondary form-select me-sm-2">
@@ -79,7 +88,7 @@
 	</table>
 </div>
 
-<div class="alert alert-dismissible bg-light border mt-5" id="alertState" style="display:none">
+<div class="alert alert-dismissible border mt-5" style="background-color:rgb(100, 160, 250, 0.1); display:none;" id="alertState">
 	<button type="button" class="btn-close" data-bs-dismiss="alert"></button>
 	<h4 class="alert-heading">Custom States</h4>
 	<p class="mb-0">
@@ -90,7 +99,7 @@
 		update and delete functions.
 	</p>
 	<div class="text-end mt-3">
-		<button onclick="turnOffStateAlert()" class="btn btn-sm btn-outline-warning">Don't show this message again...</button>
+		<button onclick="turnOffStateAlert()" class="btn btn-sm btn-outline-danger">Don't show this message again...</button>
 	</div>
 </div>
 
