--- a/DrawingRegisterWeb/Views/Projects/Index.cshtml
+++ b/DrawingRegisterWeb/Views/Projects/Index.cshtml
@@ -4,15 +4,22 @@
 	ViewData["Title"] = "Projects";
 }
 
-<h1 class="mb-3 text-primary">Projects</h1>
+<div class="row">
+	<div class="col">
+		<h1 class="text-primary">Projects</h1>
+		@if (User.IsInRole(ConstData.Role_Admin_Name))
+		{
+			<p class="mt-5">
+				<a asp-action="Create" class="btn btn-primary">Create New Project</a>
+			</p>
+		}
+	</div>
+	<div class="col text-center">
+		<img src="~/Assets/Project.svg" loading="lazy" class="mt-3" style="width:40%;min-width:150px;max-width:400px;"/>
+	</div>
+</div>
 
-@if (User.IsInRole(ConstData.Role_Admin_Name))
-{
-	<a asp-action="Create" class="btn btn-primary mb-3">Create New Project</a>
-}
-
-
-<form asp-controller="Projects" asp-action="Index" method="get" class="d-flex">
+<form asp-controller="Projects" asp-action="Index" method="get" class="d-flex mt-3">
 		<select asp-for="States" asp-items="Model.ProjectStates" class="text-secondary form-select me-sm-2">
 			<option value="">All</option>
 		</select>
