--- a/DrawingRegisterWeb/wwwroot/css/site.css
+++ b/DrawingRegisterWeb/wwwroot/css/site.css
@@ -19,22 +19,21 @@ body {
     height: 100%;
 }
 
+/*Tables CSS*/
 
-
+.table-striped > tbody > tr:nth-child(odd) > td,
+.table-striped > tbody > tr:nth-child(odd) > th {
+    background-color: rgb(100, 160, 250, 0.1);
+    box-shadow : none;
+}
 
 /*Manager page CSS*/
 
 #backgroundImgDR {
     position: relative;
-    background-image: url('../Assets/image-enginnering-bg-dr.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    opacity: 0.8;
-    height: 15em;
-}
-#backgroundImgDR h1 {
-    background-color: rgb(11, 94, 255, 0.6);
-    height: 100%;
+    background-color: rgba(100, 160, 250, 0.1);
+    height: 10em;
+    border-radius:10px;
 }
 
 
