--- a/DrawingRegisterWeb/Views/Home/Index.cshtml
+++ b/DrawingRegisterWeb/Views/Home/Index.cshtml
@@ -4,7 +4,9 @@
 
 <h1 class="lead text-center">Practice project for ASP.NET Core (Model-View-Controller) with C# and Razor Pages.</h1>
 
-<div class="row mt-5">
+<h2 class="text-center text-primary mt-5">What is Drawing Register?</h2>
+
+<div class="row mt-1">
 	<div class="col-lg-4 p-3">
 		<div class="cardHome card-1 h-100" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCard1" aria-controls="offcanvasCard1">
 			<h3>A Drawing Register</h3>
@@ -25,7 +27,9 @@
 	</div>
 </div>
 
-<div id="marginForHomeIntroduction" class="row mt-5">
+<h3 class="text-center text-primary mt-5">ASP.NET core MVC learning curve</h3>
+
+<div id="marginForHomeIntroduction" class="row mt-1">
 	<div class="col-lg-4 p-3">
 		<div class="cardHome card-4 h-100" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCard4" aria-controls="offcanvasCard4">
 			<h3>Application</h3>
@@ -144,12 +148,12 @@
 
 		function changeImgSize(){
 			if(window.innerWidth > window.innerHeight){
-				homeIntroduction.style.width = "35vh";
-				marginForImg.style.marginBottom = "25vh";
+				homeIntroduction.style.width = "30vh";
+				marginForImg.style.marginBottom = "20vh";
 			}
 			else {
-				homeIntroduction.style.width = "35vw";
-				marginForImg.style.marginBottom = "25vw";
+				homeIntroduction.style.width = "30vw";
+				marginForImg.style.marginBottom = "20vw";
 			}
 		}
 		function showImg(){
