--- a/DrawingRegisterWeb/Views/DrawingFiles/Delete.cshtml
+++ b/DrawingRegisterWeb/Views/DrawingFiles/Delete.cshtml
@@ -7,6 +7,9 @@
 <h1 class="text-danger">Delete</h1>
 
 <h3>Are you sure you want to delete this Drawing File?</h3>
+
+<span class="text-danger">@Html.TempData["NoDelete"]</span>
+
 <div>
     <hr />
     <dl class="row">
