Update Documentation Controller and views Update Layout Controller and views

--- a/DrawingRegisterWeb/Views/DrawingFiles/Delete.cshtml
+++ b/DrawingRegisterWeb/Views/DrawingFiles/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DrawingRegisterWeb.Models.DrawingFile
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "DrawingFile Delete";
 }
 
 <h1 class="text-danger">Delete</h1>
