--- a/DrawingRegisterWeb/Views/DrawingFiles/Edit.cshtml
+++ b/DrawingRegisterWeb/Views/DrawingFiles/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DrawingRegisterWeb.Models.DrawingFile
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "DrawingFile Edit";
 }
 
 <h1 class="text-primary">Edit</h1>
