--- a/DrawingRegisterWeb/Views/DrawingRegisters/Create.cshtml
+++ b/DrawingRegisterWeb/Views/DrawingRegisters/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DrawingRegisterWeb.Models.DrawingRegister
 
 @{
-	ViewData["Title"] = "Create";
+	ViewData["Title"] = "Drawing Register Create";
 }
 
 <h1 class="text-primary">Before setting up a new Drawing Register</h1>
