--- a/DrawingRegisterWeb/Views/DrawingRegisters/Delete.cshtml
+++ b/DrawingRegisterWeb/Views/DrawingRegisters/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DrawingRegisterWeb.Models.DrawingRegister
 
 @{
-	ViewData["Title"] = "Delete";
+	ViewData["Title"] = "Drawing Register Delete";
 }
 
 <h1 class="text-danger">Delete</h1>
