--- a/DrawingRegisterWeb/Views/Drawings/Create.cshtml
+++ b/DrawingRegisterWeb/Views/Drawings/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DrawingRegisterWeb.Models.Drawing
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Drawing Create";
 }
 
 <h1 class="text-primary">Create</h1>
