--- a/DrawingRegisterWeb/Views/Drawings/Edit.cshtml
+++ b/DrawingRegisterWeb/Views/Drawings/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DrawingRegisterWeb.Models.Drawing
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Drawing Edit";
 }
 
 <h1 class="text-primary">Edit</h1>
