--- a/DrawingRegisterWeb/Views/Drawings/Index.cshtml
+++ b/DrawingRegisterWeb/Views/Drawings/Index.cshtml
@@ -7,6 +7,9 @@
 <div class="row mb-5">
 	<div class="col">
 		<h1 class="text-primary">Drawings</h1>
+		<p class="mt-5 text-secondary fw-bold">
+			Search & review all active drawings
+		</p>
 	</div>
 	<div class="col text-center mt-3">
 		<img src="~/Assets/Drawing-1.svg" style="width:100px"/>
