--- a/DrawingRegisterWeb/Views/Drawings/Delete.cshtml
+++ b/DrawingRegisterWeb/Views/Drawings/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DrawingRegisterWeb.Models.Drawing
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Drawing Delete";
 }
 
 <h1 class="text-danger">Delete</h1>
