--- a/DrawingRegisterWeb/Views/Layouts/Edit.cshtml
+++ b/DrawingRegisterWeb/Views/Layouts/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DrawingRegisterWeb.Models.Layout
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "layout Edit";
 }
 
 <h1 class="text-primary">Edit</h1>
@@ -23,6 +23,8 @@
     </div>
     <div class="col-6">
         <form asp-action="Edit">
+            <span class="text-danger">@Html.ValidationMessage("WhiteSpaces")</span>
+            <span class="text-danger">@Html.ValidationMessage("NoEdit")</span>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group" hidden>
@@ -51,9 +53,7 @@
                 <span asp-validation-for="CreateDate" class="text-danger"></span>
             </div>
             <div class="form-group" hidden>
-                <label asp-for="ProjectId" class="control-label"></label>
-                <select asp-for="ProjectId" class="form-control" asp-items="ViewBag.ProjectId"></select>
-                <span asp-validation-for="ProjectId" class="text-danger"></span>
+                <input asp-for="ProjectId" class="form-control" value="@ViewBag.ProjectId" hidden>
             </div>
             <div class="btn-group mt-3" role="group">
                 <input type="submit" value="Save" class="btn btn-outline-primary" />
