--- a/DrawingRegisterWeb/Views/Layouts/Index.cshtml
+++ b/DrawingRegisterWeb/Views/Layouts/Index.cshtml
@@ -4,7 +4,17 @@
 	ViewData["Title"] = "Layouts";
 }
 
-<h1 class="text-primary mb-3">Layouts</h1>
+<div class="row mb-5">
+	<div class="col">
+		<h1 class="text-primary">Layouts</h1>
+		<p class="mt-5 text-secondary fw-bold">
+			Search & review all active Layouts
+		</p>
+	</div>
+	<div class="col text-center mt-3">
+		<img src="~/Assets/Layout.svg" style="width:100px"/>
+	</div>
+</div>
 
 <form asp-controller="Layouts" asp-action="Index" method="get" class="d-flex">
 		<select asp-for="Projects" asp-items="Model.ProjectSelectList" class="form-select me-sm-2">
@@ -15,97 +25,83 @@
 		<button class="btn btn-secondary" type="submit">Search</button>
 </form>
 
-<table class="table table-striped mt-3" id="sortTable" style="vertical-align: middle">
-	<thead>
-		<tr class="user-select-none">
-			<th onclick="sortTable(0)">
-				@Html.DisplayNameFor(model => model.Layouts![0].FileName)
-				<i class="sortIcon bi"></i>
-			</th>
-			<th onclick="sortTable(1)">
-				@Html.DisplayNameFor(model => model.Layouts![0].FileType)
-				<i class="sortIcon bi"></i>
-			</th>
-			<th onclick="sortTable(2)">
-				@Html.DisplayNameFor(model => model.Layouts![0].Project)
-				<i class="sortIcon bi"></i>
-			</th>
-			<th onclick="sortTable(3)">
-				@Html.DisplayNameFor(model => model.Layouts![0].CreateDate)
-				<i class="sortIcon bi"></i>
-			</th>
-			<th onclick="sortTable(4)">
-				@Html.DisplayNameFor(model => model.Layouts![0].Revision)
-				<i class="sortIcon bi"></i>
-			</th>
-			<th></th>
-		</tr>
-	</thead>
-	<tbody>
-		@foreach (var item in Model.Layouts!)
-		{
-			int layFileUrlendIndex = item.FileUrl.LastIndexOf(".");
-			string layThumbanilUrl = item.FileUrl.Substring(0, layFileUrlendIndex);
-			layThumbanilUrl += ".jpg";
-
-			<tr>
-				<td>
-					@Html.DisplayFor(modelItem => item.FileName)
-				</td>
-				<td>
-					@Html.DisplayFor(modelItem => item.FileType)
-				</td>
-				<td>
-					@item.Project!.ProjectNubmer @item.Project.Name
-				</td>
-				<td>
-					@item.CreateDate.ToString("yyyy/MM/dd")
-				</td>
-				<td>
-					@item.Revision
-				</td>
-				<td>
-					<div class="btn btn-group">							
-						@if (item.FileType == "pdf")
-						{
-						<a	href="@item.FileUrl"
-							target="_blank"
-							class="btn btn-outline-primary btn-lg p-0 overflow-hidden"
-							data-bs-toggle="tooltip" 
-							data-bs-placement="bottom" 
-							data-bs-original-title="Open" 
-							aria-describedby="tooltip716761"> 
-								<img src="@layThumbanilUrl" alt="Thumbanil" width="48" height="48" style="vertical-align:middle"/>
-						</a>
-						}
-						<a	href="@item.FileUrl"
-							class="btn btn-outline-primary btn-lg"
-							data-bs-toggle="tooltip" 
-							data-bs-placement="bottom" 
-							data-bs-original-title="Download" 
-							aria-describedby="tooltip716761"
-							download="@item.FileName.@item.FileType"> 
-								<i class="bi bi-cloud-download"></i>
-						</a>
-						<a asp-controller="Layouts" asp-action="Edit" asp-route-id="@item.Id"
-							class="btn btn-outline-primary btn-lg"
-							data-bs-toggle="tooltip" 
-							data-bs-placement="bottom" 
-							data-bs-original-title="Edit" 
-							aria-describedby="tooltip716761"> 
-								<i class="bi bi-pencil-square"></i>
-						</a>
-						<a asp-controller="Layouts" asp-action="Delete" asp-route-id="@item.Id"
-							class="btn btn-outline-danger btn-lg"
-							data-bs-toggle="tooltip" 
-							data-bs-placement="bottom" 
-							data-bs-original-title="Delete" 
-							aria-describedby="tooltip716761"> 
-							<i class="bi bi-trash"></i>
-						</a>
-					</div>
-				</td>
+<div class="table-responsive mt-3">
+	<table class="table table-striped" id="sortTable" style="vertical-align: middle">
+		<thead>
+			<tr class="user-select-none">
+				<th onclick="sortTable(0)">
+					@Html.DisplayNameFor(model => model.Layouts![0].FileName)
+					<i class="sortIcon bi"></i>
+				</th>
+				<th onclick="sortTable(1)">
+					@Html.DisplayNameFor(model => model.Layouts![0].FileType)
+					<i class="sortIcon bi"></i>
+				</th>
+				<th onclick="sortTable(2)">
+					@Html.DisplayNameFor(model => model.Layouts![0].Project)
+					<i class="sortIcon bi"></i>
+				</th>
+				<th onclick="sortTable(3)">
+					@Html.DisplayNameFor(model => model.Layouts![0].CreateDate)
+					<i class="sortIcon bi"></i>
+				</th>
+				<th onclick="sortTable(4)">
+					@Html.DisplayNameFor(model => model.Layouts![0].Revision)
+					<i class="sortIcon bi"></i>
+				</th>
+				<th></th>
 			</tr>
-		}
-	</tbody>
-</table>
+		</thead>
+		<tbody>
+			@foreach (var item in Model.Layouts!)
+			{
+				int layFileUrlendIndex = item.FileUrl.LastIndexOf(".");
+				string layThumbanilUrl = item.FileUrl.Substring(0, layFileUrlendIndex);
+				layThumbanilUrl += ".jpg";
+
+				<tr>
+					<td>
+						@Html.DisplayFor(modelItem => item.FileName)
+					</td>
+					<td>
+						@Html.DisplayFor(modelItem => item.FileType)
+					</td>
+					<td>
+						@item.Project!.ProjectNubmer @item.Project.Name
+					</td>
+					<td>
+						@item.CreateDate.ToString("yyyy/MM/dd")
+					</td>
+					<td>
+						@item.Revision
+					</td>
+					<td>
+						<div class="btn btn-group">							
+							@if (item.FileType == "pdf")
+							{
+							<a	href="@item.FileUrl"
+								target="_blank"
+								class="btn btn-outline-primary btn-lg p-0 overflow-hidden"
+								data-bs-toggle="tooltip" 
+								data-bs-placement="bottom" 
+								data-bs-original-title="Open" 
+								aria-describedby="tooltip716761"> 
+									<img src="@layThumbanilUrl" alt="Thumbanil" width="48" height="48" style="vertical-align:middle"/>
+							</a>
+							}
+							<a	href="@item.FileUrl"
+								class="btn btn-outline-primary btn-lg"
+								data-bs-toggle="tooltip" 
+								data-bs-placement="bottom" 
+								data-bs-original-title="Download" 
+								aria-describedby="tooltip716761"
+								download="@item.FileName.@item.FileType"> 
+									<i class="bi bi-cloud-download"></i>
+							</a>
+						</div>
+					</td>
+				</tr>
+			}
+		</tbody>
+	</table>
+</div>
