--- a/DrawingRegisterWeb/Views/Projects/Index.cshtml
+++ b/DrawingRegisterWeb/Views/Projects/Index.cshtml
@@ -13,6 +13,20 @@
 				<a asp-action="Create" class="btn btn-primary">Create New Project</a>
 			</p>
 		}
+		else
+		{
+			<p class="mt-5">
+				<button 
+					class="btn btn-outline-info"
+					type="button"
+					data-bs-toggle="tooltip" 
+					data-bs-placement="bottom" 
+					data-bs-original-title="Only Administrators have the ability to create new Projects" 
+					aria-describedby="tooltip716761">
+						Create New Project
+				</button>
+			</p>
+		}
 	</div>
 	<div class="col text-center">
 		<img src="~/Assets/Project.svg" loading="lazy" class="mt-3" style="width:40%;min-width:150px;max-width:400px;"/>
