--- a/DrawingRegisterWeb/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/DrawingRegisterWeb/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -8,16 +8,24 @@
 @{
     if (@Model.DisplayConfirmAccountLink)
     {
-<p>
-    This app does not currently have a real email sender registered, see <a href="https://aka.ms/aspaccountconf">these docs</a> for how to configure a real email sender.
-    Normally this would be emailed: <a id="confirm-link" href="@Model.EmailConfirmationUrl">Click here to confirm your account</a>
-</p>
+        <p>
+            Please check your email to confirm your account.
+        </p>
+        <p class="text-danger">
+            Since this program using the generic gmail account as email sender - it's a high probability that sent email will be put in your email's spam.
+        </p>
+        <p>
+            To test the application and set up fake accounts, I've added the confirmation link here: <a id="confirm-link" href="@Model.EmailConfirmationUrl">Click here to confirm your account</a>
+        </p>
     }
     else
     {
-<p>
-        Please check your email to confirm your account.
-</p>
+        <p>
+            Please check your email to confirm your account.
+        </p>
+        <p class="text-danger">
+            Since this program using the generic gmail account as email sender - it's a high probability that sent email will be put in your email's spam.
+        </p>
     }
 }
 
