--- a/DrawingRegisterWeb/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
+++ b/DrawingRegisterWeb/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
@@ -1,26 +1,33 @@
 ﻿@page
 @model ResendEmailConfirmationModel
 @{
-    ViewData["Title"] = "Resend email confirmation";
+	ViewData["Title"] = "Resend email confirmation";
 }
 
 <h1>@ViewData["Title"]</h1>
 <h2>Enter your email.</h2>
 <hr />
 <div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-floating">
-                <input asp-for="Input.Email" class="form-control" aria-required="true" />
-                <label asp-for="Input.Email" class="form-label"></label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Resend</button>
-        </form>
-    </div>
+	<div class="col-md-4">
+		<form method="post">
+			<div class="validation-summary-errors">
+				<ul>
+				@foreach(var error in ViewData.ModelState.Where(s => s.Value!.Errors.Count!=0).SelectMany(s => s.Value!.Errors)) {
+					<li>@Html.Raw(error.ErrorMessage)</li>
+				}
+				</ul>
+			</div>
+			<!--<div asp-validation-summary="All" class="text-danger"></div>-->
+			<div class="form-floating">
+				<input asp-for="Input.Email" class="form-control" aria-required="true" />
+				<label asp-for="Input.Email" class="form-label"></label>
+				<span asp-validation-for="Input.Email" class="text-danger"></span>
+			</div>
+			<button type="submit" class="w-100 btn btn-lg btn-primary">Resend</button>
+		</form>
+	</div>
 </div>
 
 @section Scripts {
-    <partial name="_ValidationScriptsPartial" />
+	<partial name="_ValidationScriptsPartial" />
 }
